--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>showPicker</title>
-    <link rel="stylesheet" href="main.css" />
+    <title>HTMLInputElement API</title>
+    <link rel="stylesheet" href="style.css" />
 
   </head>
   <body>
     <header class="m-3">
-      <h1 class="title">Web API: showPicker</h1>
+      <h2 class="title">Web API: showPicker</h2>
     </header>
     <main class="m-3">
       <datalist id="list">
@@ -21,8 +21,7 @@
       </datalist>
       <form action="#" name="myForm">
         <p class="my-3">
-          <button id="pickBtn">Show Picker</button>
-    <!--       <button type="button" id="pickBtn">Show Picker</button> -->
+          <button type="button" id="pickBtn">Show Picker</button>
         </p>
         <p class="my-3">
           <label for="list">Datalist</label>
@@ -33,28 +32,47 @@
           <input type="color" id="inputColor" name="inputColor" />
         </p>
         <p class="my-3">
-          <label for="inDate">Date</label><input type="date" id="inDate" name="inDate" />
+          <label for="inputDate">Date</label>
+          <input type="date" id="inputDate" name="inputDate" />
         </p>
         <p class="my-3">
-          <label for="inTime">Time</label><input type="time" id="inTime" name="inTime" />
+          <label for="inputTime">Time</label>
+          <input type="time" id="inputTime" name="inputTime" />
         </p>
         <p class="my-3">
           <label for="inputLocal">Local DateTime</label>
           <input type="datetime-local" id="inputLocal" name="inputLocal" />
         </p>
         <p class="my-3">
-          <label for="inMonth">Month</label>
-          <input type="month" id="inMonth" name="inMonth" />
+          <label for="inputMonth">Month</label>
+          <input type="month" id="inputMonth" name="inputMonth" />
         </p>
         <p class="my-3">
-          <label for="inWeek">Week</label>
-          <input type="week" id="inWeek" name="inWeek" />
+          <label for="inputWeek">Week</label>
+          <input type="week" id="inputWeek" name="inputWeek" />
         </p>
         <p class="my-3">
           <label for="inputFile">File</label>
           <input type="file" id="inputFile" accepts="image/*" name="inputFile" />
         </p>
       </form>
+    </main>
+    <hr>
+    <header class="m-3">
+      <h2 class="title">Other Input Web API</h2>
+    </header>
+    <main class="m-3">
+      <p class="my-3 d-flex">
+        <label for="numberUpandDown">stepUp & stepDown</label>
+        <button id="btnPlus" class="mx-5" type="button" value="plus">+</button>
+        <input id="numberUpandDown" type="number" value="1" min="1" max="100" name="number" autocomplete="off">
+        <button id="btnMinus" class="mx-5" type="button" value="minus">-</button>
+      </p>
+      <p class="my-3">
+        <label for="inoutSelectContent">select content</label>
+        <input class="input-selectContent" name="inoutSelectContent" type="text" value="Press the right button to select" width="200" autocomplete="off">
+        <button id="selectBtn" type="button" value="select">Select</button>
+      </p>
     </main>
     <script src="main.js"></script>
   </body>
